<resources>
    <string name="sending_in_progress">Sending…</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="retry">Try again</string>
    <string name="send">Send</string>
    <string name="period_from_to">From %1$s \nto %2$s</string>
    <string name="period_to">Until %s</string>
    <string name="app_version_not_suppored">This version (%s) of the application is not supported any more. Please update.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">BACK</string>
    <string name="display_password">Display password</string>
    <string name="menu_home">Home</string>
    <string name="menu_advice_a_client">Advice a client</string>
    <string name="menu_scan_a_card">Scan a card</string>
    <string name="menu_search_for_a_name">Search for a name</string>
    <string name="menu_new_client">Advice an unknown</string>
    <string name="menu_scan_a_new_card">Create a new card</string>
    <string name="menu_form">Create by form</string>
    <string name="menu_log_out">Log Out</string>
    <string name="play_retail">PLAY RETAIL</string>
    <string name="fragment_splash_subtitle">CLOSE TO YOUR CLIENTS TODAY\nCLOSER TOMORROW</string>
    <string name="fragment_splash_title">Cy-Play</string>
    <string name="activity_home">My Dashboard</string>
    <string name="activity_customer">Customer</string>
    <string name="activity_seller_team">Team</string>
    <string name="activity_calendar">Calendar</string>
    <string name="activity_authentication">Authentication</string>
    <string name="activity_authentication_change_password">Password modification</string>
    <string name="activity_scan">Scan</string>
    <string name="activity_product_search">Product Search</string>
    <string name="activity_customer_form">Customer Form</string>
    <string name="activity_shipping_addres_form">Shipping address form</string>
    <string name="activity_basket">Basket</string>
    <string name="activity_payment_steps">Payment</string>
    <string name="activity_payment_delivery">Payment</string>
    <string name="title_product_activity">Product</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_filters">Filters</string>
    <string name="title_offers">Offers</string>
    <string name="title_share_wishlist">Wishlist share</string>
    <string name="title_adyen_configuration">Payement terminals</string>
    <string name="title_configuration">Configuration</string>
    <string name="title_delivery_choice">Delivery</string>
    <string name="title_offers_and_tickets_choice">Offers and tickets</string>
    <string name="title_institut_appointment">Appointment</string>
    <string name="title_click_and_collect">Click &amp; Collect</string>
    <string name="title_customer_payments">Payments</string>
    <string name="title_synchronization">Synchronization</string>
    <string name="back_logout">Please press BACK again to logout</string>
    <string name="stats_display">Show stats</string>
    <string name="stats_hide">Hide stats</string>
    <string name="events">Events</string>
    <string name="customer_history">Customers Historique</string>
    <string name="activity_device_registration">Device Registration</string>
    <string name="registration_country">Select a country:</string>
    <string name="registration_shop">Select a shop:</string>
    <string name="product_tab_product">Product</string>
    <string name="product_tab_infos">Infos</string>
    <string name="product_tab_related_product_title">Related Products</string>
    <string name="product_tab_related_product_skus_title">Related Skus</string>
    <string name="product_opinion_title">Review</string>
    <string name="product_assortment_title">Assortment</string>
    <string name="product_tab_availability_title">Availabilities</string>
    <string name="product_tab_substitution_title">Substitution Products</string>
    <string name="product_unit_price">Unit price</string>
    <string name="product_stocks">Stock : </string>
    <string name="product_stock">Stock</string>
    <string name="product_sold_out">Sold out</string>
    <string name="product_restocking">Restocking</string>
    <string name="product_sku_variations">Variations</string>
    <string name="product_description">Description</string>
    <string name="product_not_available">Not Available</string>
    <string name="product_personalized_recommendations">Personalized</string>
    <string name="product_restocking_recommendations">Restocking</string>
    <string name="product_profile_recommendations">Others</string>
    <string name="product_shop_price">Shop price</string>
    <string name="product_shop_distance">%s km</string>
    <string name="product_web_price">Web price</string>
    <string name="product_stock_error">Error getting product stock</string>
    <plurals name="products_filter">
        <item quantity="zero">Filter %d product</item>
        <item quantity="one">Filter %d product</item>
        <item quantity="other">Filter %d products</item>
    </plurals>
    <string name="filter_selection">Filter selection</string>
    <string name="last_order">Order</string>
    <string name="last_order_date">%s</string>
    <string name="last_order_quantity">%s</string>
    <string name="extra_shipping_fees">Shipping fees</string>
    <string name="extra_preparation_fees">Preparation fees</string>
    <string name="extra_fees">Fees</string>
    <string name="stock_loading">Stock loading ...</string>
    <string name="stock_failed">Failure on loading stocks ...</string>
    <string name="new_product">NEW</string>
    <string name="last_displayed_product">Last displayed products</string>
    <string name="last_displayed_customer">Last displayed customers</string>
    <string name="share_wishlist_select_products">Select products to share </string>
    <plurals name="share_wishlist_send_products">
        <item quantity="zero">No selected product</item>
        <item quantity="one">Send the selected product</item>
        <item quantity="other">Send the %d selected products</item>
    </plurals>
    <string name="free_email_address">free e-mail address</string>
    <string name="choose_email_for_wishlist">Choose a e-mail address</string>
    <string name="type_email_for_wishlist">Enter an e-mail address</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="select_items_of_wishlist">Select items to send</string>
    <string name="fragment_basket_total_title">Total</string>
    <string name="fragment_basket_subtotal_title">Subtotal</string>
    <string name="fragment_basket_delivery_title">Delivery</string>
    <string name="delivery_fee_not_specified">Delivery fees not included</string>
    <string name="fragment_basket_products_title">Products</string>
    <string name="fragment_basket_offers_reduction">Reduction</string>
    <string name="fragment_basket_payment_mode">Payment</string>
    <string name="basket_update_success">Basket updated</string>
    <string name="basket_update_failed">Error while syncing basket</string>
    <string name="empty_basket">Basket is empty</string>
    <string name="collection_and_delivery">Collection and delivery</string>
    <string name="offers_and_tickets">Offers and tickets</string>
    <string name="credit_card_payment">Credit card</string>
    <string name="applied_offers">Applied offers</string>
    <string name="offer_detail">Details of the offer</string>
    <string name="fragment_basket_comment">Comment</string>
    <string name="basket_step_summary">Basket recap</string>
    <string name="basket_step_payment_choice_type">Payment choice type</string>
    <string name="basket_step_delivery_mode">Mode</string>
    <string name="basket_step_delivery">Delivery</string>
    <string name="basket_step_payment">Payment</string>
    <string name="basket_step_paymnet_success">Payment success</string>
    <string name="delivery_mode_shop_delivery">Collect</string>
    <string name="delivery_mode_shop_delivery_force_desc">This item is available in this shop. Add it to the basket</string>
    <string name="delivery_mode_shop_collect">Shop delivery</string>
    <string name="delivery_mode_shop_collect_desc">Order this item. The customer will be able to pick it up in 48 hours </string>
    <string name="delivery_mode_delivery">Delivery</string>
    <string name="delivery_mode_delivery_desc">Order this item. It will be send to the customer in 48 hours </string>
    <string name="delivery_cancel_add_to_basket_desc">Do not buy this item</string>
    <string name="apply_to_all_items_in_basket">Apply to all items in basket</string>
    <string name="add_a_shipping_address">Add a shipping address</string>
    <string name="basket_add_error">Error when adding item to the basket</string>
    <string name="basket_updating">Basket updating ...</string>
    <string name="payment_summary">Summary</string>
    <string name="email_needed_for_payment_message">A valid e-mail is mandatory to finalise the purchase. Please update the customer data.</string>
    <plurals name="product_count">
        <item quantity="zero">(Product %d)</item>
        <item quantity="one">(Product %d)</item>
        <item quantity="other">(Products %d)</item>
    </plurals>
    <string name="link_basket_to_customer_explanation">The current basket is not linked to a customer.\nHow do you want to associate it with a customer ?</string>
    <string name="link_basket_to_an_existing_customer">Link basket to an existing customer</string>
    <string name="create_new_customer">Create a customer account</string>
    <string name="basket_associate_error">Error when associating the basket to customer</string>
    <string name="update_empty_fields_explanation">Some required fields of customer are empty. Please update customer information and then complete the order.</string>
    <string name="update_customer">Update customer information</string>
    <string name="card_bank_payment">Bank card payment</string>
    <string name="shipping_fees">Shipping fees</string>
    <string name="payment_mode_choice">Choose a payment method</string>
    <string name="cancel_payment_warning">Do you want to leave the current payment ?</string>
    <string name="cancel_transaction_warning">The ongoing transaction can only be cancelled from the payment terminal.\nDo you really want to leave ?</string>
    <string name="payment_init">Payment initialisation</string>
    <string name="shop_offer_type">Offer %s</string>
    <string name="offer_to_date_filtering_asc">Ascending expiration date</string>
    <string name="offer_to_date_filtering_desc">Descending expiration date</string>
    <plurals name="offers_filter">
        <item quantity="zero">Filter %d offer</item>
        <item quantity="one">Filter %d offer</item>
        <item quantity="other">Filter %d offers</item>
    </plurals>
    <string name="item_quantity">%d x</string>
    <string name="empty_product_search">Aucun résultat correspondant\nà votre recherche</string>
    <string name="product_search_hint">Product</string>
    <string name="form_day_input_hint">DD</string>
    <string name="form_month_input_hint">MM</string>
    <string name="form_year_input_hint">YYYY</string>
    <string name="action_basket">Basket</string>
    <string name="action_catalog">Catalog</string>
    <string name="action_customer">Customer</string>
    <string name="action_scan">Scan</string>
    <string name="select">SELECT</string>
    <string name="delete">Delete</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="merchant_account_hint">Merchant Account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="year_of_birth">year of birth</string>
</resources>