<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_catalog"
        android:title="@string/action_catalog"
        android:visible="false"
        android:icon="@drawable/ic_action_catalog"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_customer"
        android:title="@string/action_customer"
        android:visible="false"
        app:actionLayout="@layout/menu_customer_spinner"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_search"
        android:title="@string/action_scan"
        android:visible="true"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_scan"
        android:title="@string/action_scan"
        android:visible="true"
        android:icon="@drawable/ic_action_scan"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_basket"
        android:title="@string/action_basket"
        android:visible="false"
        android:icon="@drawable/ic_menu_cart"
        app:showAsAction="always"
        />

</menu>