<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/contextual_default_margin">

    <EditText
        android:id="@+id/merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/merchant_account_hint"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/Black" />

    <CheckBox
        android:id="@+id/password_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/contextual_very_small_margin"
        android:text="@string/display_password" />

    <TextView
        android:id="@+id/status_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/contextual_default_margin"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/contextual_default_margin"
        android:textColor="@color/Black" />

</LinearLayout>